# quadruped_hurricane2025_nav2

./: .gitmodules  README.md
quadruped_cmd_vel_solve/: CMakeLists.txt  README.md  package.xml
quadruped_cmd_vel_solve/include/quadruped_cmd_vel_solve/: quadruped_cmd_vel_solve.hpp
quadruped_cmd_vel_solve/launch/: quadruped_cmd_vel_solve.launch.py
quadruped_cmd_vel_solve/src/: quadruped_cmd_vel_solve.cpp
quadruped_nav2_bringup/: CMakeLists.txt  README.md  package.xml
quadruped_nav2_bringup/config/: nav2_params.yaml  quadruped_nav2_params.yaml
quadruped_nav2_bringup/launch/: bringup_launch.py  localization_launch.py  navigation_launch.py  quadruped_nav2_reality_launch.py  quadruped_state_publisher_launch.py  rviz_launch.py  slam_launch.py
quadruped_nav2_bringup/rviz/: nav2_default_view.rviz
quadruped_serial_interface/: README.md  package.xml  setup.cfg  setup.py
quadruped_serial_interface/launch/: quadruped_serial_interface.launch.py
quadruped_serial_interface/quadruped_serial_interface/: __init__.py  quadruped_serial_interface.py
